--- a/app_VK/Screens/User Groups/Sections/Cells/GroupsInvitationCell.xib
+++ b/app_VK/Screens/User Groups/Sections/Cells/GroupsInvitationCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,34 +10,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="GroupsInvitationCell" customModule="app_VK" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="GroupsInvitationCell" customModule="app_VK" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dEu-iA-Ab3">
-                        <rect key="frame" x="10" y="10" width="300" height="40"/>
+                        <rect key="frame" x="10" y="10" width="300" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZIg-Fj-bw5">
-                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="dvO-L0-Ii4"/>
+                                    <constraint firstAttribute="width" constant="50" id="dvO-L0-Ii4"/>
                                     <constraint firstAttribute="width" secondItem="ZIg-Fj-bw5" secondAttribute="height" multiplier="1:1" id="qTp-Xe-Aqy"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="t4N-KH-SOS">
-                                <rect key="frame" x="50" y="0.0" width="200" height="40"/>
+                                <rect key="frame" x="60" y="0.0" width="180" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Qf-0e-YOO">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="17.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="22.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWb-jM-v6k">
-                                        <rect key="frame" x="0.0" y="22.5" width="200" height="17.5"/>
+                                        <rect key="frame" x="0.0" y="27.5" width="180" height="22.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -44,10 +45,10 @@
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hE0-bN-5i8">
-                                <rect key="frame" x="260" y="0.0" width="40" height="40"/>
+                                <rect key="frame" x="250" y="0.0" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hE0-bN-5i8" secondAttribute="height" multiplier="1:1" id="h3i-bu-DNh"/>
-                                    <constraint firstAttribute="width" constant="40" id="yYn-j3-kzx"/>
+                                    <constraint firstAttribute="width" constant="50" id="yYn-j3-kzx"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -55,26 +56,28 @@
                             <constraint firstItem="hE0-bN-5i8" firstAttribute="width" secondItem="hE0-bN-5i8" secondAttribute="height" multiplier="1:1" id="t29-s6-Peu"/>
                         </constraints>
                     </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5wV-eV-tSS">
-                        <rect key="frame" x="60" y="60" width="120" height="10"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5wV-eV-tSS">
+                        <rect key="frame" x="70" y="70" width="112" height="20"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ebg-Uu-KVS">
-                                <rect key="frame" x="0.0" y="0.0" width="55" height="10"/>
+                                <rect key="frame" x="0.0" y="0.0" width="46" height="20"/>
                                 <state key="normal" title="Button"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAe-gR-1ce">
-                                <rect key="frame" x="65" y="0.0" width="55" height="10"/>
+                                <rect key="frame" x="66" y="0.0" width="46" height="20"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="112" id="Rnk-cu-yZ3"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="5wV-eV-tSS" firstAttribute="top" secondItem="dEu-iA-Ab3" secondAttribute="bottom" constant="10" id="BBT-mh-VIR"/>
                     <constraint firstAttribute="trailing" secondItem="dEu-iA-Ab3" secondAttribute="trailing" constant="10" id="COW-Z1-UHl"/>
                     <constraint firstItem="dEu-iA-Ab3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="bM6-Ab-ewl"/>
-                    <constraint firstAttribute="trailing" secondItem="5wV-eV-tSS" secondAttribute="trailing" constant="140" id="dD0-CA-tac"/>
-                    <constraint firstItem="5wV-eV-tSS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="jHF-Ci-hnx"/>
+                    <constraint firstItem="5wV-eV-tSS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="70" id="jHF-Ci-hnx"/>
                     <constraint firstAttribute="bottom" secondItem="5wV-eV-tSS" secondAttribute="bottom" constant="10" id="mTU-gM-N2i"/>
                     <constraint firstItem="dEu-iA-Ab3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="qfG-oz-YIN"/>
                 </constraints>
