--- a/app_VK/Screens/User Friends/Sections/Cells/UserFriendCell.xib
+++ b/app_VK/Screens/User Friends/Sections/Cells/UserFriendCell.xib
@@ -1,21 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="UserFriendCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="84" id="KGk-i7-Jjw" customClass="UserFriendCell" customModule="app_VK" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="640" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="640" height="84"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gcg-ca-8R7">
+                        <rect key="frame" x="10" y="10" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="AWQ-QU-hOR"/>
+                            <constraint firstAttribute="width" secondItem="gcg-ca-8R7" secondAttribute="height" multiplier="1:1" id="QeI-Gm-4YP"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F32-30-ayi">
+                        <rect key="frame" x="80" y="10" width="550" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="X47-2z-2W8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zh6-CH-wju">
+                        <rect key="frame" x="80" y="50" width="550" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="1qs-Os-vFh"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="F32-30-ayi" secondAttribute="trailing" constant="10" id="0Xj-QR-0uw"/>
+                    <constraint firstItem="F32-30-ayi" firstAttribute="leading" secondItem="gcg-ca-8R7" secondAttribute="trailing" constant="10" id="4Uo-ye-RYw"/>
+                    <constraint firstItem="F32-30-ayi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="AF2-SI-KAh"/>
+                    <constraint firstItem="gcg-ca-8R7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="I6Z-E6-1Xa"/>
+                    <constraint firstItem="gcg-ca-8R7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="L3x-ao-xxh"/>
+                    <constraint firstItem="zh6-CH-wju" firstAttribute="top" secondItem="F32-30-ayi" secondAttribute="bottom" constant="10" id="TyU-De-qqR"/>
+                    <constraint firstItem="zh6-CH-wju" firstAttribute="leading" secondItem="gcg-ca-8R7" secondAttribute="trailing" constant="10" id="YmW-be-MaA"/>
+                    <constraint firstAttribute="trailing" secondItem="zh6-CH-wju" secondAttribute="trailing" constant="10" id="oD6-Go-25k"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="324.63768115942031" y="93.080357142857139"/>
         </tableViewCell>
     </objects>
 </document>
