--- a/app_VK/Screens/Base.lproj/Main.storyboard
+++ b/app_VK/Screens/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
         <!--Новости-->
         <scene sceneID="lwT-Xt-Nt4">
             <objects>
-                <tableViewController modalPresentationStyle="fullScreen" id="DNr-1h-68t" sceneMemberID="viewController">
+                <tableViewController modalPresentationStyle="fullScreen" id="DNr-1h-68t" customClass="UserNewsViewController" customModule="app_VK" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="LUc-N4-czl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
