--- a/app_VK/Screens/User News/Cells/NewsTextTableViewCell.xib
+++ b/app_VK/Screens/User News/Cells/NewsTextTableViewCell.xib
@@ -11,20 +11,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="NewsTextTableViewCell" customModule="app_VK" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6bO-Yf-rMY">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                        <rect key="frame" x="10" y="10" width="300" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dJi-kK-iR6">
-                        <rect key="frame" x="139" y="30" width="161" height="30"/>
+                        <rect key="frame" x="139" y="40" width="161" height="30"/>
                         <state key="normal" title="Показать полностью..."/>
                         <connections>
                             <action selector="expand:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Eva-jh-DNT"/>
@@ -32,11 +32,11 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="6bO-Yf-rMY" secondAttribute="trailing" id="9xy-iY-xyU"/>
+                    <constraint firstAttribute="trailing" secondItem="6bO-Yf-rMY" secondAttribute="trailing" constant="10" id="9xy-iY-xyU"/>
                     <constraint firstAttribute="trailing" secondItem="dJi-kK-iR6" secondAttribute="trailing" constant="20" id="JR5-qk-RLB"/>
-                    <constraint firstItem="6bO-Yf-rMY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SCv-l5-2L6"/>
-                    <constraint firstItem="6bO-Yf-rMY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="eSy-1a-UWq"/>
-                    <constraint firstAttribute="bottom" secondItem="6bO-Yf-rMY" secondAttribute="bottom" id="fXP-1r-llg"/>
+                    <constraint firstItem="6bO-Yf-rMY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="SCv-l5-2L6"/>
+                    <constraint firstItem="6bO-Yf-rMY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="eSy-1a-UWq"/>
+                    <constraint firstAttribute="bottom" secondItem="6bO-Yf-rMY" secondAttribute="bottom" constant="30" id="fXP-1r-llg"/>
                     <constraint firstAttribute="bottom" secondItem="dJi-kK-iR6" secondAttribute="bottom" id="lFW-2W-CZx"/>
                 </constraints>
             </tableViewCellContentView>
